--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>Practice JavaScript by véletlenszámGenerálás</title>
 </head>
 <body>
+	<div class=intro> Gondoltam egy számra 1 és 100 között! </div>
   <script src="script.js"></script>
 </body>
 </html>
